--- a/package.json
+++ b/package.json
@@ -25,9 +25,8 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@react-oauth/google": "^0.12.2",
     "@stripe/react-stripe-js": "^4.0.2",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
     "class-variance-authority": "^0.7.1",
     "cmdk": "^1.1.1",
     "date-fns": "^2.30.0",
@@ -40,6 +39,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.62.0",
     "react-resizable-panels": "^3.0.6",
+    "react-router-dom": "^7.9.1",
     "react-scripts": "5.0.1",
     "recharts": "^3.2.0",
     "sonner": "^2.0.7",
@@ -73,6 +73,9 @@
     ]
   },
   "devDependencies": {
-    "@types/node": "^16.18.0"
+    "@types/node": "^16.18.0",
+    "@types/react": "^19.1.14",
+    "@types/react-dom": "^19.1.9",
+    "@types/react-router-dom": "^5.3.3"
   }
 }
