--- a/package.json
+++ b/package.json
@@ -28,13 +28,17 @@
     "@react-oauth/google": "^0.12.2",
     "@stripe/react-stripe-js": "^4.0.2",
     "@stripe/stripe-js": "^7.9.0",
+    "@types/qrcode": "^1.5.6",
     "class-variance-authority": "^0.7.1",
     "cmdk": "^1.1.1",
+    "cors": "^2.8.5",
     "date-fns": "^2.30.0",
     "embla-carousel-react": "^8.6.0",
+    "express": "^5.1.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.263.1",
     "next-themes": "^0.4.6",
+    "qrcode": "^1.5.4",
     "react": "^18.2.0",
     "react-day-picker": "^9.9.0",
     "react-dom": "^18.2.0",
