--- a/package.json
+++ b/package.json
@@ -81,6 +81,9 @@
     "@types/node": "^16.18.0",
     "@types/react": "^19.1.14",
     "@types/react-dom": "^19.1.9",
-    "@types/react-router-dom": "^5.3.3"
+    "@types/react-router-dom": "^5.3.3",
+    "autoprefixer": "^10.4.22",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.17"
   }
 }
